[gd_scene load_steps=13 format=2]

[ext_resource path="res://Terrain.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/comics_deluxe/Comics Deluxe.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://level1.gd" type="Script" id=5]
[ext_resource path="res://collectible.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/tilemap/soldier_cheer2.png" type="Texture" id=7]

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 4 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 1788, 7.5 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=5]
radius = 39.0
height = 44.0

[node name="World" type="Node2D"]
script = ExtResource( 3 )

[node name="level1" type="Label" parent="."]
margin_left = -33.0
margin_top = 385.0
margin_right = 167.0
margin_bottom = 438.0
rect_min_size = Vector2( 200, 40 )
size_flags_horizontal = 3
size_flags_vertical = 7
size_flags_stretch_ratio = 5.0
theme = SubResource( 2 )
custom_constants/shadow_offset_x = 1
custom_fonts/font = SubResource( 3 )
text = "Level 1"
align = 1
valign = 1
autowrap = true
uppercase = true
script = ExtResource( 5 )

[node name="Terrain" parent="." instance=ExtResource( 1 )]
cell_size = Vector2( 18, 18 )
tile_data = PoolIntArray( -131034, 0, 65539, -131033, 0, 65539, -131032, 0, 65539, -131031, 0, 65539, -131030, 0, 65539, -131029, 0, 65539, -131028, 0, 65539, -1, 0, 65539, 65535, 0, 65539, 55, 0, 3, 57, 0, 65539, 58, 0, 65539, 131071, 0, 65539, 65554, 0, 65539, 65555, 0, 65539, 65556, 0, 65539, 65557, 0, 65539, 65558, 0, 65539, 65559, 0, 65539, 65593, 0, 65539, 196607, 0, 65539, 131095, 0, 65539, 131096, 0, 65539, 131097, 0, 65539, 131122, 0, 3, 131123, 0, 3, 131129, 0, 65539, 131135, 0, 65539, 262143, 0, 65539, 196656, 0, 3, 196657, 0, 3, 196658, 0, 3, 196665, 0, 65539, 196676, 0, 65539, 196677, 0, 65539, 196678, 0, 65539, 196679, 0, 65539, 196680, 0, 65539, 327679, 0, 65539, 262189, 0, 3, 262190, 0, 3, 262191, 0, 3, 262192, 0, 3, 262201, 0, 65539, 262217, 0, 65539, 393215, 0, 65539, 327723, 0, 3, 327724, 0, 3, 327725, 0, 3, 327737, 0, 65539, 458751, 0, 65539, 393245, 0, 65539, 393246, 0, 65539, 393247, 0, 65539, 393248, 0, 65539, 393249, 0, 65539, 393250, 0, 65539, 393251, 0, 65539, 393252, 0, 65539, 393257, 0, 3, 393258, 0, 3, 393259, 0, 3, 393273, 0, 65539, 393290, 0, 65539, 524287, 0, 65539, 458792, 0, 3, 458793, 0, 3, 458809, 0, 65539, 589823, 0, 65539, 524328, 0, 3, 524345, 0, 65539, 655359, 0, 65539, 589863, 0, 3, 589881, 0, 65539, 720895, 0, 65539, 655375, 0, 65539, 655376, 0, 65539, 655377, 0, 65539, 655378, 0, 65539, 655379, 0, 65539, 655395, 0, 3, 655396, 0, 3, 655397, 0, 3, 655398, 0, 3, 655417, 0, 65539, 655435, 0, 65539, 655436, 0, 65539, 655437, 0, 65539, 655438, 0, 65539, 786431, 0, 65539, 720929, 0, 3, 720930, 0, 3, 720931, 0, 3, 720953, 0, 65539, 851967, 0, 65539, 786462, 0, 3, 786463, 0, 3, 786464, 0, 3, 786489, 0, 65539, 917503, 0, 65539, 851998, 0, 3, 852006, 0, 65539, 852007, 0, 65539, 852008, 0, 65539, 852009, 0, 65539, 852010, 0, 65539, 852025, 0, 65539, 983039, 0, 65539, 917561, 0, 65539, 1048575, 0, 65539, 983058, 0, 65539, 983059, 0, 65539, 983060, 0, 65539, 983061, 0, 65539, 983062, 0, 65539, 983063, 0, 65539, 983097, 0, 65539, 983109, 0, 65539, 983110, 0, 65539, 983111, 0, 65539, 983112, 0, 65539, 983113, 0, 65539, 1114111, 0, 65539, 1048602, 0, 65539, 1048603, 0, 65539, 1048604, 0, 65539, 1048605, 0, 65539, 1048606, 0, 65539, 1048607, 0, 65539, 1048633, 0, 65539, 1179647, 0, 65539, 1114169, 0, 65539, 1245162, 0, 3, 1245183, 0, 65539, 1179658, 0, 65539, 1179659, 0, 65539, 1179660, 0, 65539, 1179705, 0, 65539, 1310719, 0, 65539, 1245215, 0, 65539, 1245216, 0, 65539, 1245217, 0, 65539, 1245241, 0, 65539, 1245250, 0, 65539, 1376255, 0, 65539, 1310754, 0, 65539, 1310755, 0, 65539, 1310756, 0, 65539, 1310777, 0, 65539, 1441791, 0, 65539, 1376313, 0, 65539, 1507327, 0, 65539, 1441806, 0, 65539, 1441807, 0, 65539, 1441849, 0, 65539, 1441855, 0, 65539, 1441856, 0, 65539, 1441857, 0, 65539, 1441858, 0, 65539, 1441859, 0, 65539, 1572863, 0, 65539, 1507371, 0, 65539, 1507372, 0, 65539, 1507373, 0, 65539, 1507374, 0, 65539, 1507375, 0, 65539, 1507376, 0, 65539, 1507385, 0, 65539, 1638399, 0, 65539, 1572921, 0, 65539, 1703935, 0, 65539, 1638457, 0, 65539, 1769471, 0, 65539, 1703944, 0, 15, 1703945, 0, 14, 1703946, 0, 13, 1703947, 0, 14, 1703948, 0, 16, 1703993, 0, 65539, 1704003, 0, 65539, 1704004, 0, 65539, 1704005, 0, 65539, 1704006, 0, 65539, 1704007, 0, 65539, 1835007, 0, 65539, 1769482, 0, 65549, 1769508, 0, 65539, 1769509, 0, 65539, 1769510, 0, 65539, 1769511, 0, 65539, 1769512, 0, 65539, 1769529, 0, 65539, 1900543, 0, 65539, 1835018, 0, 131085, 1835065, 0, 65539, 1966079, 0, 65539, 1900554, 0, 196621, 1900572, 0, 65539, 1900573, 0, 65539, 1900574, 0, 65539, 1900601, 0, 65539, 2031615, 0, 65539, 1966080, 0, 65539, 1966081, 0, 65539, 1966082, 0, 65539, 1966083, 0, 65539, 1966084, 0, 65539, 1966085, 0, 65539, 1966086, 0, 65539, 1966087, 0, 65539, 1966088, 0, 65539, 1966089, 0, 65539, 1966090, 0, 65539, 1966091, 0, 65539, 1966092, 0, 65539, 1966093, 0, 65539, 1966094, 0, 65539, 1966095, 0, 65539, 1966096, 0, 65539, 1966097, 0, 65539, 1966098, 0, 65539, 1966099, 0, 65539, 1966100, 0, 65539, 1966101, 0, 65539, 1966102, 0, 65539, 1966103, 0, 65539, 1966104, 0, 65539, 1966113, 0, 65539, 1966114, 0, 65539, 1966115, 0, 65539, 1966116, 0, 65539, 1966117, 0, 65539, 1966118, 0, 65539, 1966119, 0, 65539, 1966120, 0, 65539, 1966121, 0, 65539, 1966122, 0, 65539, 1966123, 0, 65539, 1966124, 0, 65539, 1966125, 0, 65539, 1966126, 0, 65539, 1966127, 0, 65539, 1966128, 0, 65539, 1966129, 0, 65539, 1966137, 0, 65539, 1966138, 0, 65539, 1966139, 0, 65539, 1966140, 0, 65539, 1966141, 0, 65539, 1966142, 0, 65539, 1966143, 0, 65539, 1966144, 0, 65539, 1966145, 0, 65539, 1966146, 0, 65539, 1966147, 0, 65539, 1966148, 0, 65539, 1966149, 0, 65539, 1966150, 0, 65539, 1966151, 0, 65539, 1966152, 0, 65539, 1966153, 0, 65539, 1966154, 0, 65539, 1966155, 0, 65539, 1966156, 0, 65539, 1966157, 0, 65539, 1966158, 0, 65539, 2097151, 0, 65539, 2031616, 0, 65541, 2031617, 0, 65541, 2031618, 0, 65541, 2031619, 0, 65541, 2031620, 0, 65541, 2031621, 0, 65541, 2031622, 0, 65541, 2031623, 0, 65541, 2031624, 0, 65541, 2031625, 0, 65541, 2031626, 0, 65541, 2031627, 0, 65541, 2031628, 0, 65541, 2031629, 0, 65541, 2031630, 0, 65541, 2031631, 0, 65541, 2031632, 0, 65541, 2031633, 0, 65541, 2031634, 0, 65541, 2031635, 0, 65541, 2031636, 0, 65541, 2031637, 0, 65541, 2031638, 0, 65541, 2031639, 0, 65541, 2031640, 0, 65541, 2031649, 0, 65541, 2031650, 0, 65541, 2031651, 0, 65541, 2031652, 0, 65541, 2031653, 0, 65541, 2031654, 0, 65541, 2031655, 0, 65541, 2031656, 0, 65541, 2031657, 0, 65541, 2031658, 0, 65541, 2031659, 0, 65541, 2031660, 0, 65541, 2031661, 0, 65541, 2031662, 0, 65541, 2031663, 0, 65541, 2031664, 0, 65541, 2031665, 0, 65541, 2031673, 0, 65541, 2162687, 0, 65539, 2097152, 0, 65541, 2097153, 0, 65541, 2097154, 0, 65541, 2097155, 0, 65541, 2097156, 0, 65541, 2097157, 0, 65541, 2097158, 0, 65541, 2097159, 0, 65541, 2097160, 0, 65541, 2097161, 0, 65541, 2097162, 0, 65541, 2097163, 0, 65541, 2097164, 0, 65541, 2097165, 0, 65541, 2097166, 0, 65541, 2097167, 0, 65541, 2097168, 0, 65541, 2097169, 0, 65541, 2097170, 0, 65541, 2097171, 0, 65541, 2097172, 0, 65541, 2097173, 0, 65541, 2097174, 0, 65541, 2097175, 0, 65541, 2097176, 0, 65541, 2097185, 0, 65541, 2097186, 0, 65541, 2097187, 0, 65541, 2097188, 0, 65541, 2097189, 0, 65541, 2097190, 0, 65541, 2097191, 0, 65541, 2097192, 0, 65541, 2097193, 0, 65541, 2097194, 0, 65541, 2097195, 0, 65541, 2097196, 0, 65541, 2097197, 0, 65541, 2097198, 0, 65541, 2097199, 0, 65541, 2097200, 0, 65541, 2097201, 0, 65541, 2097209, 0, 65541, 2228223, 0, 65539, 2162688, 0, 65541, 2162689, 0, 65541, 2162690, 0, 65541, 2162691, 0, 65541, 2162692, 0, 65541, 2162693, 0, 65541, 2162694, 0, 65541, 2162695, 0, 65541, 2162696, 0, 65541, 2162697, 0, 65541, 2162698, 0, 65541, 2162699, 0, 65541, 2162700, 0, 65541, 2162701, 0, 65541, 2162702, 0, 65541, 2162703, 0, 65541, 2162704, 0, 65541, 2162705, 0, 65541, 2162706, 0, 65541, 2162707, 0, 65541, 2162708, 0, 65541, 2162709, 0, 65541, 2162710, 0, 65541, 2162711, 0, 65541, 2162712, 0, 65541, 2162721, 0, 65541, 2162722, 0, 65541, 2162723, 0, 65541, 2162724, 0, 65541, 2162725, 0, 65541, 2162726, 0, 65541, 2162727, 0, 65541, 2162728, 0, 65541, 2162729, 0, 65541, 2162730, 0, 65541, 2162731, 0, 65541, 2162732, 0, 65541, 2162733, 0, 65541, 2162734, 0, 65541, 2162735, 0, 65541, 2162736, 0, 65541, 2162737, 0, 65541, 2162745, 0, 65541 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 30, 250 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 0
limit_bottom = 600
smoothing_enabled = true

[node name="Label" type="Label" parent="Player/Camera2D"]
margin_left = -35.0
margin_top = -130.0
margin_right = 75.0
margin_bottom = -83.0
custom_fonts/font = SubResource( 3 )

[node name="KillPlane" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillPlane"]
position = Vector2( 1591, 671 )
shape = SubResource( 1 )

[node name="collectibles" type="Node2D" parent="."]

[node name="collectible1" parent="collectibles" instance=ExtResource( 6 )]
position = Vector2( 844, 164 )

[node name="collectible6" parent="collectibles" instance=ExtResource( 6 )]
position = Vector2( 534, 501 )

[node name="collectible7" parent="collectibles" instance=ExtResource( 6 )]
position = Vector2( 699, -55 )

[node name="collectible8" parent="collectibles" instance=ExtResource( 6 )]
position = Vector2( 533, 90 )

[node name="collectible9" parent="collectibles" instance=ExtResource( 6 )]
position = Vector2( 198, 303 )

[node name="collectible11" parent="collectibles" instance=ExtResource( 6 )]
position = Vector2( 381, 242 )

[node name="collectible10" parent="collectibles" instance=ExtResource( 6 )]
position = Vector2( 125, 497 )

[node name="Goal" type="Area2D" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="Goal"]
position = Vector2( 1378, 510 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goal"]
position = Vector2( 1375, 524 )
shape = SubResource( 5 )

[node name="won" type="Label" parent="."]
margin_left = 1331.0
margin_top = 424.0
margin_right = 1445.0
margin_bottom = 460.0
custom_colors/font_color = Color( 0.913725, 0.0705882, 0.0705882, 1 )
custom_colors/font_outline_modulate = Color( 0.494118, 0.0980392, 0.0980392, 1 )
custom_fonts/font = SubResource( 3 )

[connection signal="body_entered" from="KillPlane" to="." method="_on_KillPlane_body_entered"]
[connection signal="snowCollected" from="collectibles/collectible1" to="." method="_on_collectible_snowCollected"]
[connection signal="snowCollected" from="collectibles/collectible6" to="." method="_on_collectible_snowCollected"]
[connection signal="snowCollected" from="collectibles/collectible7" to="." method="_on_collectible_snowCollected"]
[connection signal="snowCollected" from="collectibles/collectible8" to="." method="_on_collectible_snowCollected"]
[connection signal="snowCollected" from="collectibles/collectible9" to="." method="_on_collectible_snowCollected"]
[connection signal="snowCollected" from="collectibles/collectible11" to="." method="_on_collectible_snowCollected"]
[connection signal="snowCollected" from="collectibles/collectible10" to="." method="_on_collectible_snowCollected"]
[connection signal="body_entered" from="Goal" to="." method="_on_Goal_body_entered"]
